@@ -7,6 +7,7 @@ FPM_HOST=wordpress
 LETSENCRYPT=NO
 IP_WHITELIST_1=37.128.134.212
 IP_WHITELIST_2=5.153.250.222
+DISABLE_CONF=custom_error.conf block_files.conf
 
 # Database
 ROOT_PASS=password
