@@ -82,6 +82,23 @@ function modsec()
   envsubst '${MODSEC_ENGINE_MODE}' < /etc/nginx/modsec/modsecurity.conf > /tmp/modsecurity.conf && mv /tmp/modsecurity.conf /etc/nginx/modsec/modsecurity.conf
 }
 
+function custom_errors()
+{
+  conf_dir=/etc/nginx/hardening.d
+
+  # Undisable everything by default
+  for conf_file in $(ls $conf_dir/*disabled); do
+    mv $conf_file ${conf_file%.disabled}.conf
+  done
+
+  # Disable file1.conf file2.conf file3.conf in $DISABLE_CONF variable
+  files=$(env | grep DISABLE_CONF | awk -F '=' '{print $2}')
+  for conf_file in ${files//,/}; do
+    conf_file=${conf_dir}/${conf_file%.conf}
+    mv ${conf_file}.conf ${conf_file}.disabled
+  done
+}
+
 function main() {
   set -e
   env_sub
@@ -90,6 +107,7 @@ function main() {
   log_permissions
   basic_auth_whitelist
   modsec
+  custom_errors
   nginx -g 'daemon off;'
 }
 
